--- a/html/css/schoolprograms.css
+++ b/html/css/schoolprograms.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Poppins', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: url("../images/neon\ green.jpg") center/cover no-repeat fixed;
+    background: url("images/neon\ green.jpg") center/cover no-repeat fixed;
     color: #e7e7e7;
     min-height: 100vh;
     line-height: 1.6;
@@ -182,7 +182,7 @@ nav a.active::after {
 /* ----------------- Hero ----------------- */
 .hero {
     height: 350px;
-    background: url("../images/taino game1.jpg") center/cover no-repeat;
+    background: url("images/taino game1.jpg") center/cover no-repeat;
     position: relative;
     display: flex;
     justify-content: center;
