--- a/html/css/yukayeke.css
+++ b/html/css/yukayeke.css
@@ -7,7 +7,7 @@
 
 body {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;   
-    background: url("images/neon\ green.jpg") center/cover no-repeat fixed;
+    background: url("../images/neon\ green.jpg") center/cover no-repeat fixed;
     color: #e7e7e7;
     min-height: 100vh;
     line-height: 1.5;
@@ -217,7 +217,7 @@ section p {
 .page-hero {
   text-align: center;
   background: linear-gradient(rgba(19, 172, 14, 0.9), rgba(4, 139, 45, 0.9)),
-              url("images/hero-background.jpg") center/cover no-repeat;
+              url("../images/hero-background.jpg") center/cover no-repeat;
 }
 
 .page-hero h2 {
