--- a/html/css/contactus.css
+++ b/html/css/contactus.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: url("images/neon\ green.jpg") center/cover no-repeat fixed;
+    background: url("../images/neon\ green.jpg") center/cover no-repeat fixed;
     color: #e7e7e7;
     min-height: 100vh;
     line-height: 1.5;
