--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -11,7 +11,7 @@ body {
     color: #e7e7e7;
     min-height: 100vh;
     line-height: 1.5;
-    backdrop-filter: blur(2px);    
+    /* backdrop-filter: blur(1px);     */
     overflow-x: hidden;
 }
 
